fix the video issue

--- a/layout/hero/hero-video/hero-video.module.scss
+++ b/layout/hero/hero-video/hero-video.module.scss
@@ -1,12 +1,19 @@
 @import "@variables/variables";
 .box {
   overflow: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.4);
+  position: relative;
+
+  padding-bottom: 56.25%; /* 16:9 aspect ratio for widescreen videos */
+
+  &::after {
+    content: "";
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.4);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 }
 .video {
   position: absolute;
@@ -18,7 +25,4 @@
   height: 100%;
 
   border: none;
-  @media screen and (max-width: $small-screen) {
-    width: 150%;
-  }
 }
